Update file path and handle ValueError exception
Updated the JSON file path for 'infant_hiv_test_objs'. Also added error handling for 'ValueError' when testing a child's age falls into the categories of 6-8 weeks, 9 months, 18 months, and birth. This ensures a smoother execution of the data migration process.

--- a/Notebooks/#7419_infant_test_crf_data_migration.ipynb
+++ b/Notebooks/#7419_infant_test_crf_data_migration.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "\n",
     "infant_hiv_test_objs = read_json_file(\n",
-    "    '/Users/nimrodmunatsi/Downloads/infanthivtesting.json')\n",
+    "    '/home/nmunatsi/infanthivtesting.json')\n",
     "\n",
     "for infant_hiv_test_obj in tqdm(infant_hiv_test_objs):\n",
     "    if infant_hiv_test_obj.get('fields').get(\n",
@@ -386,61 +386,65 @@
     "\n",
     "    report_datetime = datetime.strptime(report_datetime, \"%Y-%m-%dT%H:%M:%SZ\")\n",
     "    report_datetime = report_datetime.replace(tzinfo=pytz.UTC)\n",
-    "    age_at_test = age(child_consent.child_dob, child_test_date)\n",
-    "\n",
     "    try:\n",
-    "        child_visit = ChildVisit.objects.get(visit_code=visit[3],\n",
-    "                                             subject_identifier=subject_identifier)\n",
-    "    except ChildVisit.DoesNotExist:\n",
-    "        print(f'Child visit {visit[3]} does not exist for {subject_identifier}')\n",
-    "        continue\n",
-    "\n",
+    "        age_at_test = age(child_consent.child_dob, child_test_date)\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        print(f'Child {subject_identifier}\\'s dob {child_consent.child_dob} is less than the test date {child_test_date}')\n",
     "    else:\n",
-    "\n",
-    "        options = {\n",
-    "            'child_visit': child_visit,\n",
-    "            'report_datetime': report_datetime,\n",
-    "            'child_tested_for_hiv': infant_hiv_test_obj.get('fields').get(\n",
-    "                'child_test_date'),\n",
-    "            'child_test_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
-    "                'child_test_date_estimated'),\n",
-    "            'results_received': infant_hiv_test_obj.get('fields').get('results_received'),\n",
-    "            'recall_result_date': infant_hiv_test_obj.get('fields').get(\n",
-    "                'recall_result_date'),\n",
-    "            'received_date': infant_hiv_test_obj.get('fields').get('received_date'),\n",
-    "            'result_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
-    "                'result_date_estimated'),\n",
-    "            'hiv_test_result': infant_hiv_test_obj.get('fields').get('hiv_test_result'),\n",
-    "            'additional_comments': infant_hiv_test_obj.get('fields').get(\n",
-    "                'additional_comments'),\n",
-    "        }\n",
-    "        #test done at 6-8 weeks\n",
-    "        # test age in weeks\n",
-    "        age_in_weeks = (age_at_test.years * 52.143) + (age_at_test.months * 4.348)\n",
-    "        if 6 <= age_in_weeks <= 8:\n",
-    "            test_obj = InfantHIVTestingAge6To8Weeks.objects.create(\n",
-    "                **options\n",
-    "            )\n",
-    "        #test done at 9 months\n",
-    "        elif age_at_test.years == 0 and age_at_test.months == 9:\n",
-    "            test_obj = InfantHIVTesting9Months.objects.create(\n",
-    "                **options\n",
-    "            )\n",
-    "        #test done at 18 months\n",
-    "        elif age_at_test.years == 1 and age_at_test.months == 6:\n",
-    "            test_obj = InfantHIVTesting9Months.objects.create(\n",
-    "                **options\n",
-    "            )\n",
-    "        #test done at birth\n",
-    "        elif age_at_test.years == 0 and age_at_test.months == 0:\n",
-    "            test_obj = InfantHIVTesting9Months.objects.create(\n",
-    "                **options\n",
-    "            )\n",
+    "        try:\n",
+    "            child_visit = ChildVisit.objects.get(visit_code=visit[3],\n",
+    "                                                 subject_identifier=subject_identifier)\n",
+    "        except ChildVisit.DoesNotExist:\n",
+    "            print(f'Child visit {visit[3]} does not exist for {subject_identifier}')\n",
+    "            continue\n",
+    "    \n",
     "        else:\n",
-    "            test_obj = InfantHIVTestingOther.objects.create(\n",
-    "                **options\n",
-    "            )\n",
-    "        test_obj.save()\n"
+    "    \n",
+    "            options = {\n",
+    "                'child_visit': child_visit,\n",
+    "                'report_datetime': report_datetime,\n",
+    "                'child_tested_for_hiv': infant_hiv_test_obj.get('fields').get(\n",
+    "                    'child_test_date'),\n",
+    "                'child_test_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
+    "                    'child_test_date_estimated'),\n",
+    "                'results_received': infant_hiv_test_obj.get('fields').get('results_received'),\n",
+    "                'recall_result_date': infant_hiv_test_obj.get('fields').get(\n",
+    "                    'recall_result_date'),\n",
+    "                'received_date': infant_hiv_test_obj.get('fields').get('received_date'),\n",
+    "                'result_date_estimated': infant_hiv_test_obj.get('fields').get(\n",
+    "                    'result_date_estimated'),\n",
+    "                'hiv_test_result': infant_hiv_test_obj.get('fields').get('hiv_test_result'),\n",
+    "                'additional_comments': infant_hiv_test_obj.get('fields').get(\n",
+    "                    'additional_comments'),\n",
+    "            }\n",
+    "            #test done at 6-8 weeks\n",
+    "            # test age in weeks\n",
+    "            age_in_weeks = (age_at_test.years * 52.143) + (age_at_test.months * 4.348)\n",
+    "            if 6 <= age_in_weeks <= 8:\n",
+    "                test_obj = InfantHIVTestingAge6To8Weeks.objects.create(\n",
+    "                    **options\n",
+    "                )\n",
+    "            #test done at 9 months\n",
+    "            elif age_at_test.years == 0 and age_at_test.months == 9:\n",
+    "                test_obj = InfantHIVTesting9Months.objects.create(\n",
+    "                    **options\n",
+    "                )\n",
+    "            #test done at 18 months\n",
+    "            elif age_at_test.years == 1 and age_at_test.months == 6:\n",
+    "                test_obj = InfantHIVTesting9Months.objects.create(\n",
+    "                    **options\n",
+    "                )\n",
+    "            #test done at birth\n",
+    "            elif age_at_test.years == 0 and age_at_test.months == 0:\n",
+    "                test_obj = InfantHIVTesting9Months.objects.create(\n",
+    "                    **options\n",
+    "                )\n",
+    "            else:\n",
+    "                test_obj = InfantHIVTestingOther.objects.create(\n",
+    "                    **options\n",
+    "                )\n",
+    "            test_obj.save()\n"
    ],
    "metadata": {
     "collapsed": false,
