Update file path and handle ValueError exception
Updated the JSON file path for 'infant_hiv_test_objs'. Also added error handling for 'ValueError' when testing a child's age falls into the categories of 6-8 weeks, 9 months, 18 months, and birth. This ensures a smoother execution of the data migration process.

--- a/Notebooks/#7419_infant_test_crf_data_migration.ipynb
+++ b/Notebooks/#7419_infant_test_crf_data_migration.ipynb
@@ -379,18 +379,16 @@
     "    if not (child_consent.child_dob and infant_hiv_test_obj.get('fields').get(\n",
     "            'child_test_date')):\n",
     "        continue\n",
-    "\n",
-    "    child_test_date = infant_hiv_test_obj.get('fields').get('child_test_date')\n",
-    "    child_test_date = datetime.strptime(child_test_date, \"%Y-%m-%d\")\n",
+    "        \n",
     "    report_datetime = infant_hiv_test_obj.get('fields').get('report_datetime')\n",
     "\n",
     "    report_datetime = datetime.strptime(report_datetime, \"%Y-%m-%dT%H:%M:%SZ\")\n",
     "    report_datetime = report_datetime.replace(tzinfo=pytz.UTC)\n",
     "    try:\n",
-    "        age_at_test = age(child_consent.child_dob, child_test_date)\n",
+    "        age_at_test = age(child_consent.child_dob, report_datetime)\n",
     "    \n",
     "    except ValueError:\n",
-    "        print(f'Child {subject_identifier}\\'s dob {child_consent.child_dob} is less than the test date {child_test_date}')\n",
+    "        print(f'Child {subject_identifier}\\'s dob {child_consent.child_dob} is less than the test date {report_datetime}')\n",
     "    else:\n",
     "        try:\n",
     "            child_visit = ChildVisit.objects.get(visit_code=visit[3],\n",
