Add list of unscreened participants

--- a/flourish/notebooks/facent_no_six_month_visit.ipynb
+++ b/flourish/notebooks/facent_no_six_month_visit.ipynb
@@ -195,8 +195,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Facet participnats with no six month Visit"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +219,40 @@
     "    writer.writerow(['subject_identifiers'])\n",
     "    for i in range((facet_consents_no_visits.count())):\n",
     "        writer.writerow([facet_consents_no_visits[i]])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Facet eligible participants with no screening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flourish_caregiver.models import SubjectConsent\n",
+    "from flourish_facet.views import EligibleFacetParticipantsMixin\n",
+    "from flourish_facet.models import FacetSubjectScreening\n",
+    "\n",
+    "flourish_consents = SubjectConsent.objects.all()\n",
+    "\n",
+    "facet_eligible = EligibleFacetParticipantsMixin()\n",
+    "facet_eligible_participants =facet_eligible.eligible_participants(flourish_consents)\n",
+    "\n",
+    "facet_screened = FacetSubjectScreening.objects.values_list('subject_identifier',flat=True)\n",
+    "\n",
+    "unscreened_participants = facet_eligible_participants.exclude(subject_identifier__in=facet_screened).values_list('subject_identifier',flat=True)\n",
+    "\n",
+    "with open ('eligible_participants.csv','w',newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    writer.writerow(['subject_identifiers'])\n",
+    "    for i in range((unscreened_participants.count())):\n",
+    "        writer.writerow([unscreened_participants[i]])"
    ]
   }
  ],
