--- a/Notebooks/correct_childidx_onschedule_ultrasound.ipynb
+++ b/Notebooks/correct_childidx_onschedule_ultrasound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "47409a2b",
    "metadata": {},
    "outputs": [],
@@ -17,33 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fd067804",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Ultrasound' from 'flourish_caregiver.models' (/Users/amediphoko/source/flourish-caregiver/flourish_caregiver/models/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ee3909bf2ce6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mflourish_caregiver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mUltrasound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0multrasounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUltrasound\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjects\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Ultrasound' from 'flourish_caregiver.models' (/Users/amediphoko/source/flourish-caregiver/flourish_caregiver/models/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from flourish_caregiver.models import Ultrasound\n",
-    "ultrasounds = Ultrasound.objects.all()"
+    "ultrasounds = UltraSound.objects.all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1f78e72a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B142-040990625-1-10\n",
+      "B142-040991122-8-10\n",
+      "B142-040991190-5-10\n",
+      "B142-040990919-8-10\n"
+     ]
+    }
+   ],
    "source": [
     "for ultrasound in ultrasounds:\n",
     "    try:\n",
@@ -76,6 +74,14 @@
     "                    print('childidx', onschedule_obj.child_subject_identifier)\n",
     "        print('error', ultrasound.child_subject_identifier)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe6eb83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
