Change the initials

--- a/Notebooks/#7615_change_surname.ipynb
+++ b/Notebooks/#7615_change_surname.ipynb
@@ -27,12 +27,14 @@
     "from flourish_caregiver.models import SubjectConsent\n",
     "pid = 'B142-040990094-0'\n",
     "last_name = 'LELOKWANE'\n",
+    "initials = 'OL'\n",
     "try:\n",
     "    subject_consent = SubjectConsent.objects.get(subject_identifier = pid,version =4)\n",
     "except SubjectConsent.DoesNotExist:\n",
     "    pass\n",
     "else:\n",
     "    subject_consent.last_name = last_name\n",
+    "    subject_consent.initials =initials\n",
     "    subject_consent.save()"
    ]
   }
