Add firstname and last name

--- a/flourish/notebooks/resave_facet_child_consent_1207.ipynb
+++ b/flourish/notebooks/resave_facet_child_consent_1207.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,10 +35,10 @@
     "facet_consent = FacetConsent.objects.filter(subject_identifier=subject_identifier).latest('report_datetime')\n",
     "try:\n",
     "    caregiver_child_consent = CaregiverChildConsent.objects.filter(subject_consent__subject_identifier=subject_identifier).latest('consent_datetime')\n",
-    "except DoesNotExist:\n",
+    "except CaregiverChildConsent.DoesNotExist:\n",
     "    pass\n",
     "else:\n",
-    "    facet_child_consent = MotherChildConsent.objects.create(subject_identifier=caregiver_child_consent.subject_identifier,facet_consent=facet_consent,gender='M',child_test='Yes',consent_datetime=facet_consent.consent_datetime)\n",
+    "    facet_child_consent = MotherChildConsent.objects.create(subject_identifier=caregiver_child_consent.subject_identifier,facet_consent=facet_consent,gender='M',child_test='Yes',consent_datetime=facet_consent.consent_datetime,first_name=caregiver_child_consent.first_name,last_name=caregiver_child_consent.last_name)\n",
     "    facet_child_consent.save()"
    ]
   }
