--- a/flourish/notebooks/resave_facet_child_consent_1207.ipynb
+++ b/flourish/notebooks/resave_facet_child_consent_1207.ipynb
@@ -38,7 +38,7 @@
     "except CaregiverChildConsent.DoesNotExist:\n",
     "    pass\n",
     "else:\n",
-    "    facet_child_consent = MotherChildConsent.objects.create(subject_identifier=caregiver_child_consent.subject_identifier,facet_consent=facet_consent,gender='M',child_test='Yes',consent_datetime=facet_consent.consent_datetime,first_name=caregiver_child_consent.first_name,last_name=caregiver_child_consent.last_name)\n",
+    "    facet_child_consent = MotherChildConsent.objects.create(subject_identifier=caregiver_child_consent.subject_identifier,facet_consent=facet_consent,gender='M',child_test='Yes',consent_datetime=facet_consent.consent_datetime,first_name=caregiver_child_consent.first_name,last_name=caregiver_child_consent.last_name,child_dob=caregiver_child_consent.child_dob)\n",
     "    facet_child_consent.save()"
    ]
   }
