--- a/flourish/notebooks/Data_Fix_7675.ipynb
+++ b/flourish/notebooks/Data_Fix_7675.ipynb
@@ -27,8 +27,8 @@
     "collapsed": false
    },
    "source": [
-    "redmine ticket 7657\n",
-    "Change subject last name and initials"
+    "redmine ticket 7675\n",
+    "Change subject firstname name"
    ]
   },
   {
@@ -42,18 +42,14 @@
     "from flourish_caregiver.models import SubjectConsent, MaternalDataset, CaregiverLocator\n",
     "from edc_registration.models import RegisteredSubject\n",
     "\n",
-    "subject_id = 'B142-040990246-6'\n",
-    "last_name = 'NCUBE'\n",
-    "initials = 'OTN'\n",
+    "subject_id = 'B142-040991130-1'\n",
+    "first_name = 'GOABAONE'\n",
     "\n",
     "for model_class in [SubjectConsent, MaternalDataset, CaregiverLocator, RegisteredSubject]:\n",
     "    consent_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
     "    for instance in consent_objs:\n",
-    "        instance.last_name = last_name\n",
-    "        if model_class in [SubjectConsent,RegisteredSubject] :\n",
-    "            instance.initials = initials\n",
-    "            print(model_class, instance.initials)\n",
-    "        print(model_class, instance.last_name)\n",
+    "        instance.first_name = first_name\n",
+    "        print(model_class, instance.first_name)\n",
     "        instance.save()"
    ]
   }
