Fix variables in data fix

--- a/flourish/notebooks/data_fix- 874-5-10.ipynb
+++ b/flourish/notebooks/data_fix- 874-5-10.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "subject_identifier = 'B142-040990874-5-10'\n",
     "\n",
     "try:\n",
-    "    chid_requsition = ChildRequisition.objects.get(subject_identifier=subject_identifier,\n",
+    "    child_requisition = ChildRequisition.objects.get(subject_identifier=subject_identifier,\n",
     "                        child_visit__visit_code='3000',child_visit__visit_code_sequence=1,\n",
     "                        panel__display_name='DNA PCR')\n",
     "                        \n",
@@ -51,7 +51,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   }
  },
