--- a/flourish/notebooks/Data_fix_not_twins.ipynb
+++ b/flourish/notebooks/Data_fix_not_twins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from edc_constants.constants import NOT_APPLICABLE,YES,NO\n",
     "import csv\n",
     "\n",
-    "participants= {'B142-040990096-5':{'B142-040990096-5-70':['3001M','3006M']},\n",
+    "participants= {'B142-040990096-5':{'B142-040990096-5-70':['3001M']},\n",
     "                      'B142-040990786-1':{'B142-040990786-1-10':['2008M','2009M']},\n",
     "                      'B142-040990786-1':{'B142-040990786-1-60':['3000C','3001M']}\n",
     "}\n",
@@ -48,16 +48,16 @@
     "            for socio_demographic in socio_demographics: \n",
     "                if child_id == socio_demographic.child_subject_identifier:\n",
     "                    print(\"child_pid\",socio_demographic.child_subject_identifier)\n",
-    "                    house_hold_details = HouseHoldDetails.objects.filter(\n",
-    "                        socio_demographics_data__maternal_visit__subject_identifier=participant_id)\n",
+    "                    \n",
+    "                    house_hold_details= socio_demographic.householddetails_set.all()\n",
+    "        \n",
     "                    socio_demographic.stay_with_child = house_hold_details[0].stay_with_child\n",
     "                    socio_demographic.save()\n",
     "                    print(\"Socio\",socio_demographic.stay_with_child)\n",
+    "                    for house_hold_detail in house_hold_details:\n",
+    "                        print(\"House_hold\",house_hold_detail.child_identifier)\n",
+    "                        house_hold_detail.delete()\n",
     "\n",
-    "                    for houhouse_hold_detail in house_hold_details:\n",
-    "                        if houhouse_hold_detail.socio_demographics_data.child_subject_identifier == child_id:\n",
-    "                            print(\"House_hold\",houhouse_hold_detail.socio_demographics_data.child_subject_identifier)\n",
-    "                            houhouse_hold_detail.delete()\n",
     "                            \n"
    ]
   },
