Fix for visit 3006M

--- a/flourish/notebooks/Data_fix_not_twins.ipynb
+++ b/flourish/notebooks/Data_fix_not_twins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,29 @@
     "                    stay_with_caregiver = child_socio_demographic.stay_with_caregiver\n",
     "\n",
     "                    writer.writerow([maternal_identifier,child_identifier, visit_code, stay_with_child, stay_with_caregiver])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject_identifier = 'B142-040990096-5'\n",
+    "child_identifier = 'B142-040990096-5-70'\n",
+    "\n",
+    "socio_demographics = SocioDemographicData.objects.filter(maternal_visit__subject_identifier=subject_identifier,maternal_visit__visit_code='3006M')\n",
+    "\n",
+    "for socio_demographic in socio_demographics:\n",
+    "   if socio_demographic.child_subject_identifier == child_identifier:\n",
+    "        try:\n",
+    "            child_socio_demographic = ChildSocioDemographic.objects.get(child_visit__subject_identifier=socio_demographic.child_subject_identifier,child_visit__visit_code='3006')\n",
+    "        except ChildSocioDemographic.DoesNotExist:\n",
+    "            pass\n",
+    "        else:\n",
+    "            socio_demographic.stay_with_child = child_socio_demographic.stay_with_caregiver\n",
+    "            print(\"Child Socio\",child_socio_demographic.stay_with_caregiver)\n",
+    "            socio_demographic.save()"
    ]
   }
  ],
