Fix the socio demographic script

--- a/flourish/notebooks/Data_fix_not_twins.ipynb
+++ b/flourish/notebooks/Data_fix_not_twins.ipynb
@@ -26,13 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flourish_caregiver.models import SocioDemographicData,HouseHoldDetails\n",
+    "from flourish_caregiver.models import SocioDemographicData\n",
     "from edc_constants.constants import NOT_APPLICABLE,YES,NO\n",
     "import csv\n",
     "\n",
     "participants= {'B142-040990096-5':{'B142-040990096-5-70':['3001M']},\n",
     "                      'B142-040990786-1':{'B142-040990786-1-10':['2008M','2009M']},\n",
-    "                      'B142-040990786-1':{'B142-040990786-1-60':['3000C','3001M']}\n",
+    "                      'B142-040990786-1':{'B142-040990786-1-60':['3000C']}\n",
     "}\n",
     "\n",
     "\n",
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "from flourish_child.models import ChildSocioDemographic\n",
-    "\n",
+    "import csv\n",
     "maternal_socio_demographics = SocioDemographicData.objects.all()\n",
     "\n",
     "child_socio_demographics = ChildSocioDemographic.objects.all()\n",
@@ -165,7 +165,7 @@
     "\n",
     "    writer.writerow(['maternal_identifier','child_identifier', 'Visit Code','stay_with_child','stay_with_caregiver']) \n",
     "\n",
-    "    for maternal_socio_demographic in socio_demographics:\n",
+    "    for maternal_socio_demographic in maternal_socio_demographics:\n",
     "        for child_socio_demographic in child_socio_demographics:\n",
     "            if child_socio_demographic.child_visit.subject_identifier == maternal_socio_demographic.child_subject_identifier and maternal_socio_demographic.maternal_visit.visit_code[:4] == child_socio_demographic.child_visit.visit_code :\n",
     "                if maternal_socio_demographic.stay_with_child != child_socio_demographic.stay_with_caregiver:\n",
@@ -193,6 +193,52 @@
     "   if socio_demographic.child_subject_identifier == child_identifier:\n",
     "        try:\n",
     "            child_socio_demographic = ChildSocioDemographic.objects.get(child_visit__subject_identifier=socio_demographic.child_subject_identifier,child_visit__visit_code='3006')\n",
+    "        except ChildSocioDemographic.DoesNotExist:\n",
+    "            pass\n",
+    "        else:\n",
+    "            socio_demographic.stay_with_child = child_socio_demographic.stay_with_caregiver\n",
+    "            print(\"Child Socio\",child_socio_demographic.stay_with_caregiver)\n",
+    "            socio_demographic.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject_identifier = 'B142-040990261-5'\n",
+    "child_identifier = 'B142-040990261-5-10'\n",
+    "\n",
+    "socio_demographics = SocioDemographicData.objects.filter(maternal_visit__subject_identifier=subject_identifier,maternal_visit__visit_code='3005S')\n",
+    "\n",
+    "for socio_demographic in socio_demographics:\n",
+    "   if socio_demographic.child_subject_identifier == child_identifier:\n",
+    "        try:\n",
+    "            child_socio_demographic = ChildSocioDemographic.objects.get(child_visit__subject_identifier=socio_demographic.child_subject_identifier,child_visit__visit_code='3005S')\n",
+    "        except ChildSocioDemographic.DoesNotExist:\n",
+    "            pass\n",
+    "        else:\n",
+    "            socio_demographic.stay_with_child = child_socio_demographic.stay_with_caregiver\n",
+    "            print(\"Child Socio\",child_socio_demographic.stay_with_caregiver)\n",
+    "            socio_demographic.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject_identifier = 'B142-040990786-1'\n",
+    "child_identifier = 'B142-040990786-1-60'\n",
+    "\n",
+    "socio_demographics = SocioDemographicData.objects.filter(maternal_visit__subject_identifier=subject_identifier,maternal_visit__visit_code='3001M')\n",
+    "\n",
+    "for socio_demographic in socio_demographics:\n",
+    "   if socio_demographic.child_subject_identifier == child_identifier:\n",
+    "        try:\n",
+    "            child_socio_demographic = ChildSocioDemographic.objects.get(child_visit__subject_identifier=socio_demographic.child_subject_identifier,child_visit__visit_code='3001')\n",
     "        except ChildSocioDemographic.DoesNotExist:\n",
     "            pass\n",
     "        else:\n",
