--- a/flourish/notebooks/Data_fix_not_twins.ipynb
+++ b/flourish/notebooks/Data_fix_not_twins.ipynb
@@ -170,7 +170,7 @@
     "            if child_socio_demographic.child_visit.subject_identifier == maternal_socio_demographic.child_subject_identifier and maternal_socio_demographic.maternal_visit.visit_code[:4] == child_socio_demographic.child_visit.visit_code :\n",
     "                if maternal_socio_demographic.stay_with_child != child_socio_demographic.stay_with_caregiver:\n",
     "                    maternal_identifier = maternal_socio_demographic.maternal_visit.subject_identifier\n",
-    "                    child_identifier = socio_demographic.child_subject_identifier\n",
+    "                    child_identifier = maternal_socio_demographic.child_subject_identifier\n",
     "                    visit_code = maternal_socio_demographic.maternal_visit.visit_code\n",
     "                    stay_with_child = maternal_socio_demographic.stay_with_child\n",
     "                    stay_with_caregiver = child_socio_demographic.stay_with_caregiver\n",
