--- a/flourish/notebooks/Data_fix_clinician_notes_image.ipynb
+++ b/flourish/notebooks/Data_fix_clinician_notes_image.ipynb
@@ -27,18 +27,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flourish_caregiver.models import ClinicianNotesImage\n",
+    "from flourish_caregiver.models import ClinicianNotesImage,ClinicianNotes\n",
     "\n",
     "subject_identifier = 'B142-040990024-7'\n",
     "image = 'caregiver_notes/53dbb619-8a2b-427c-a374-e648f44387ba.jpeg'\n",
     "try:\n",
-    "    clinician_notes_images = ClinicianNotesImage.objects.get(clinician_notes__maternal_visit__subject_identifier=subject_identifier,\n",
-    "                                                            clinician_notes__maternal_visit__visit_code='3000C',image=image)\n",
+    "    clinician_notes_images = ClinicianNotes.objects.get(maternal_visit__visit_code='3000C',\n",
+    "                                                        maternal_visit__subject_identifier =subject_identifier).caregiver_clinician_notes.get(image=image)\n",
     "except ClinicianNotesImage.DoesNotExist:\n",
     "    pass\n",
     "else:\n",
     "    clinician_notes_images.delete()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -48,7 +53,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.3"
   }
  },
