--- a/flourish/notebooks/data_fix_7760.ipynb
+++ b/flourish/notebooks/data_fix_7760.ipynb
@@ -34,11 +34,8 @@
     "subject_identifier = 'B142-040990122-9'\n",
     "corret_dob = date(1984,11,1)\n",
     "\n",
-    "try:\n",
-    "    subject_consent = SubjectConsent.objects.get(subject_identifier=subject_identifier,version=1)\n",
-    "except ObjectDoesNotExist:\n",
-    "    pass\n",
-    "else:\n",
+    "subject_consents = SubjectConsent.objects.filter(subject_identifier=subject_identifier)\n",
+    "for subject_consent in subject_consents:\n",
     "    subject_consent.dob = corret_dob\n",
     "    subject_consent.save()\n",
     "    "
