--- a/flourish/notebooks/fix_schedules_551-9.ipynb
+++ b/flourish/notebooks/fix_schedules_551-9.ipynb
@@ -22,54 +22,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove mother from the enrollment schedule\n",
-    "\n",
-    "\n",
-    "And remove the already created appointment\n"
+    "Remove 2011M.1 Schedule from maternal side\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from edc_visit_schedule.models import SubjectScheduleHistory\n",
-    "\n",
-    "subject_identifier = 'B142-040990371-2'\n",
-    "schedule_name_mother = 'a_enrol2_schedule1'\n",
-    "\n",
-    "subject_history_obj = SubjectScheduleHistory.objects.get(\n",
-    "subject_identifier=subject_identifier,\n",
-    "schedule_name = schedule_name_mother\n",
-    ")\n",
-    "onschedule_model_cls= django_apps.get_model(subject_history_obj.onschedule_model)\n",
-    "\n",
-    "onschedule_model_obj = onschedule_model_cls.objects.get(\n",
-    "    subject_identifier=subject_identifier,\n",
-    "    schedule_name=schedule_name_mother,\n",
-    "    onschedule_datetime=subject_history_obj.onschedule_datetime,\n",
-    ")\n",
-    "onschedule_model_obj.delete()\n",
-    "subject_history_obj.delete()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from edc_appointment.models import Appointment\n",
     "\n",
-    "appointments_visit_codes = ['2000M']\n",
-    "mother_appointments = Appointment.objects.filter(subject_identifier=subject_identifier,\n",
-    "                                                 schedule_name=schedule_name_mother)\n",
+    "subject_identifier = 'B142-040990551-9'\n",
     "\n",
-    "for appointemnt in mother_appointments:\n",
-    "    if appointemnt.visit_code not in appointments_visit_codes:\n",
-    "        print(f'Deleting {appointemnt.visit_code}')\n",
-    "        appointemnt.delete()"
+    "try:\n",
+    "    mother_appointment = Appointment.objects.get(subject_identifier=subject_identifier,\n",
+    "                                                 visit_code='2011M',visit_code_sequence=1)\n",
+    "    \n",
+    "except Appointment.DoesNotExist:\n",
+    "    pass\n",
+    "\n",
+    "else:\n",
+    "    mother_appointment.delete()\n"
    ]
   }
  ],
