--- a/flourish/notebooks/fix_schedules_551-9.ipynb
+++ b/flourish/notebooks/fix_schedules_551-9.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "from edc_appointment.models import Appointment\n",
+    "from flourish_calendar.models import Reminder\n",
     "\n",
     "subject_identifier = 'B142-040990551-9'\n",
     "\n",
@@ -43,6 +44,11 @@
     "    pass\n",
     "\n",
     "else:\n",
+    "    title = (f'{mother_appointment.subject_identifier[-6:]}'\n",
+    "                                 f' TB 2 week call : @ {mother_appointment.visit_code}')\n",
+    "    reminders= Reminder.objects.filter(title =title)\n",
+    "    for reminder in reminders:\n",
+    "        reminder.delete()\n",
     "    mother_appointment.delete()\n"
    ]
   }
