Add birth form to name fix

--- a/flourish/notebooks/Data_Fix_7826.ipynb
+++ b/flourish/notebooks/Data_Fix_7826.ipynb
@@ -29,27 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from flourish_caregiver.models import CaregiverChildConsent\n",
+    "from flourish_child.models import ChildBirth\n",
     "\n",
     "subject_id = 'B142-040991051-9-10'\n",
     "first_name = 'TEKO OMATLA'\n",
     "\n",
-    "caregiver_child_consents = CaregiverChildConsent.objects.filter(subject_identifier=subject_id)\n",
+    "for model_class in [CaregiverChildConsent,ChildBirth]:\n",
+    "    model_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
     "\n",
-    "for caregiver_child_consent in caregiver_child_consents:\n",
-    "    caregiver_child_consent.first_name = first_name\n",
-    "    caregiver_child_consent.save()\n"
+    "    for model_obj in model_objs:\n",
+    "        model_obj.first_name = first_name\n",
+    "        model_obj.save()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +60,12 @@
     "subject_id = 'B142-040991084-0-10'\n",
     "first_name = 'ZENITH RONA'\n",
     "\n",
-    "caregiver_child_consents = CaregiverChildConsent.objects.filter(subject_identifier=subject_id)\n",
+    "for model_class in [CaregiverChildConsent,ChildBirth]:\n",
+    "    model_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
     "\n",
-    "for caregiver_child_consent in caregiver_child_consents:\n",
-    "    caregiver_child_consent.first_name = first_name\n",
-    "    caregiver_child_consent.save()"
+    "    for model_obj in model_objs:\n",
+    "        model_obj.first_name = first_name\n",
+    "        model_obj.save()"
    ]
   }
  ],
