--- a/flourish/notebooks/Data_Fix_7826.ipynb
+++ b/flourish/notebooks/Data_Fix_7826.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -40,33 +40,44 @@
     "\n",
     "subject_id = 'B142-040991051-9-10'\n",
     "first_name = 'TEKO OMATLA'\n",
+    "initials = 'TOM'\n",
     "\n",
     "for model_class in [CaregiverChildConsent,ChildBirth]:\n",
-    "    model_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
-    "\n",
-    "    for model_obj in model_objs:\n",
-    "        model_obj.first_name = first_name\n",
-    "        model_obj.save()\n"
+    "        model_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
+    "        for model_obj in model_objs:\n",
+    "            model_obj.first_name = first_name \n",
+    "            if model_class == ChildBirth:\n",
+    "                model_obj.initials = initials\n",
+    "            model_obj.save()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flourish_caregiver.models import CaregiverChildConsent\n",
-    "\n",
+    "from flourish_child.models import ChildBirth\n",
     "subject_id = 'B142-040991084-0-10'\n",
     "first_name = 'ZENITH RONA'\n",
-    "\n",
+    "initials = 'ZNP'\n",
     "for model_class in [CaregiverChildConsent,ChildBirth]:\n",
     "    model_objs = model_class.objects.filter(subject_identifier=subject_id)\n",
     "\n",
     "    for model_obj in model_objs:\n",
-    "        model_obj.first_name = first_name\n",
+    "        model_obj.first_name = first_name \n",
+    "        if model_class == ChildBirth:\n",
+    "            model_obj.initials = initials\n",
     "        model_obj.save()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
