Take the mother off the Quartely for -60

--- a/flourish/notebooks/fix_schedules_272-1.ipynb
+++ b/flourish/notebooks/fix_schedules_272-1.ipynb
@@ -35,7 +35,6 @@
     "\n",
     "subject_identifier = 'B142-040991272-1'\n",
     "child_subject_identifier ='B142-040991272-1-10'\n",
-    "schedule_name_mother = 'c_quarterly1_schedule1'\n",
     "schedule_name_child = 'child_c_fu_schedule1'\n",
     "\n",
     "subject_history_obj_child = SubjectScheduleHistory.objects.get(\n",
@@ -66,11 +65,9 @@
     "import pytz\n",
     "tz = pytz.timezone('Africa/Gaborone')\n",
     "\n",
-    "maternal_visits = MaternalVisit.objects.filter(subject_identifier=subject_identifier,visit_code='2003M')\n",
-    "for maternal_visit in maternal_visits:\n",
-    "    if maternal_visit.child_subject_identifier == child_subject_identifier:\n",
-    "        child_schedule = OnScheduleChildCohortCFU.objects.get(subject_identifier=child_subject_identifier)\n",
-    "        schedule_name= 'c_fu1_schedule1'\n",
+    "        \n",
+    "child_schedule = OnScheduleChildCohortCFU.objects.get(subject_identifier=child_subject_identifier)\n",
+    "schedule_name= 'c_fu1_schedule1'\n",
     "\n",
     "_, schedule = site_visit_schedules.get_by_onschedule_model_schedule_name(\n",
     "    onschedule_model='flourish_caregiver.onschedulecohortcfu',name=schedule_name\n",
@@ -88,6 +85,34 @@
     "        onschedule_mother.save()\n",
     "\n",
     "        print(\"Linked with child\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take Mother off the Second child Quarterly schedule for -60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "schedule_name = 'c_quarterly2_schedule1'\n",
+    "\n",
+    "\n",
+    "_, schedule = site_visit_schedules.get_by_onschedule_model_schedule_name(\n",
+    "    onschedule_model='flourish_caregiver.onschedulecohortcquarterly',name=schedule_name\n",
+    ")\n",
+    "\n",
+    "schedule.take_off_schedule(subject_identifier=subject_identifier,offschedule_datetime=onschedule_datetime,\n",
+    "                           schedule_name=schedule_name)\n",
+    "\n",
+    "print(\"Taken off\",schedule)\n"
    ]
   }
  ],
