fix the other things

--- a/flourish/notebooks/fix_schedules_272-1.ipynb
+++ b/flourish/notebooks/fix_schedules_272-1.ipynb
@@ -42,15 +42,7 @@
     "schedule_name = schedule_name_child\n",
     ")\n",
     "\n",
-    "onschedule_model_cls_child= django_apps.get_model(subject_history_obj_child.onschedule_model)\n",
-    "\n",
-    "onschedule_model_obj_child = onschedule_model_cls_child.objects.get(\n",
-    "    subject_identifier=child_subject_identifier,\n",
-    "    schedule_name=schedule_name_child,\n",
-    "    onschedule_datetime=subject_history_obj_child.onschedule_datetime,\n",
-    ")\n",
-    "\n",
-    "onschedule_datetime = onschedule_model_obj_child.onschedule_datetime\n"
+    "onschedule_datetime =subject_history_obj_child.onschedule_datetime\n"
    ]
   },
   {
@@ -60,7 +52,7 @@
    "outputs": [],
    "source": [
     "from edc_visit_schedule.site_visit_schedules import site_visit_schedules\n",
-    "from flourish_caregiver.models import MaternalVisit,OnScheduleCohortCFU\n",
+    "from flourish_caregiver.models import OnScheduleCohortCFU\n",
     "from flourish_child.models.onschedule import OnScheduleChildCohortCFU\n",
     "import pytz\n",
     "tz = pytz.timezone('Africa/Gaborone')\n",
