--- a/flourish/notebooks/fix_schedules_272-1.ipynb
+++ b/flourish/notebooks/fix_schedules_272-1.ipynb
@@ -70,13 +70,11 @@
     ")\n",
     "print(\"Schedule created for\",schedule)\n",
     "\n",
-    "onschdule_mothers= OnScheduleCohortCFU.objects.filter(subject_identifier=subject_identifier)\n",
-    "for onschedule_mother in onschdule_mothers:\n",
-    "    if onschedule_mother.child_subject_identifier == '':\n",
-    "        onschedule_mother.child_subject_identifier =child_schedule.subject_identifier\n",
-    "        onschedule_mother.save()\n",
+    "onschdule_mother = OnScheduleCohortCFU.objects.get(subject_identifier=subject_identifier,child_subject_identifier__isnull=True)\n",
+    "onschdule_mother.child_subject_identifier =child_schedule.subject_identifier\n",
+    "onschdule_mother.save()\n",
     "\n",
-    "        print(\"Linked with child\")\n"
+    "print(\"Linked with child\")\n"
    ]
   },
   {
